--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -16,7 +16,7 @@ div#wall div#tag-3.slick, .wicked {
   display: none;
 }
 
-#wall div.parent #tag-5 .slick{
+div#wall div.parent div#tag-5.slick{
   display: none;
 }
 
