--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -22,7 +22,7 @@ div#wall div.parent div#tag-5.slick{
 
 
 
-#wall div.parent #tag-6 {
+body div#wall div.parent div:last-child div#tag-6 {
   display: none;
 }
 
