--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -11,7 +11,6 @@ div#wall div#tag-3.slick, .wicked {
   display: none;
 }
 
-
 #wall .parent #tag-4 {
   display: none;
 }
@@ -20,9 +19,10 @@ div#wall div.parent div#tag-5.slick{
   display: none;
 }
 
-
-
 body div#wall div.parent div:last-child div#tag-6 {
   display: none;
 }
 
+body div#wall div.parent div > div#tag-7.slick {
+  display: none;
+}
